--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,14 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^8.0",
         "spatie/laravel-package-tools": "^1.9.2",
         "illuminate/contracts": "^8.0"
     },
     "require-dev": {
         "nunomaduro/collision": "^6.0",
-        "orchestra/testbench": "^6.0",
+        "nunomaduro/larastan": "^2.0.1",
+        "orchestra/testbench": "^7.0",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
         "phpstan/extension-installer": "^1.1",
