--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -42,9 +42,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}"
-          "illuminate/contracts:${{ matrix.contracts }}" "php:${{ matrix.php }}
-          --no-interaction --no-update
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
+          composer require "illuminate/contracts:${{ matrix.contracts }}" "php:${{ matrix.php }}
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
       - name: Execute tests
